--- a/style.css
+++ b/style.css
@@ -37,8 +37,25 @@ h1 {
 p {
     margin-bottom: 1em;
     font-size: 0.85em;
+    font-weight: 400;
     line-height: 1.25;
     padding: 0 60px;
+}
+
+img.right {
+    float: right;
+    padding: 5px;
+}
+
+ul {
+    list-style-type: square;
+    padding: 0 90px;
+}
+
+ul li {
+   font-size: 0.85em;
+   line-height: 1.3;
+   padding-bottom: 8px; 
 }
 
 .byline {
